Fixed different spacing on front page than other pages

--- a/sites/all/themes/fa/css/layouts/fixed-width.css
+++ b/sites/all/themes/fa/css/layouts/fixed-width.css
@@ -109,8 +109,12 @@
 }
 
 .sidebar-first .node {
-  margin-left: 80px;
+  margin-left: 160px;
   padding-right: 40px;
+}
+
+.front.sidebar-first .node {
+  margin-left: 80px;  
 }
 
 /*
